Increased font-size and fixed CTA on mobile

--- a/wp-content/themes/sovereign-agricultural/sass/modules/sections.scss
+++ b/wp-content/themes/sovereign-agricultural/sass/modules/sections.scss
@@ -377,6 +377,7 @@
 	background: $colorOne;
 	position: relative;
 	padding: 80px 0 70px 0;
+	text-align: center;
 
 	&:before {
 		content: '';
@@ -385,27 +386,38 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background: url('img/cta_grass.png') no-repeat center center;
+		background: url('img/cta_grass.png') center center;
 	}
 
 	h3 {
 		color: #fff;
-		font-size: 1.6em;
+		font-size: 2em;
+		float: left;
+		margin-right: 50px;
 	}
 
 	h4 {
-		font-size: 1.3em;
-		float: left;
+		font-size: 2em;
 		color: #fff;
-		display: block;
+		display: inline-block;
+		float: left;
 		border-bottom: 2px solid #fff;
 	}
 
+	.grid-container {
+	    max-width: 1800px;
+	    margin: 0 auto;
+	    display: inline-block;
+	    width: auto;
+	}
+
 	.btn-one {
-		margin-top: -6px;
+		margin-top: 6px;
 		background: #fff;
 		color: $colorOne;
-		float: right;
+		margin-left: 50px;
+		display: inline-block;
+		float: left;
 		padding: 15px 50px;
 
 		&:hover {
@@ -414,7 +426,25 @@
 		}
 	}
 
+	@media (max-width: 1415px) {
+		h3, h4 {
+			text-align: center;
+			float: none;
+		}
+
+		.btn-one {
+			display: inline-block;
+			float: none;
+			margin: 30px auto 0;
+			display: block;
+			width: 140px;
+			text-align: center;
+		}
+	}
+
 	@include mq("small", "max-width") {
+		padding: 30px 0 20px 0;
+
 		.col-6 {
 			width: 100%;
 		}
@@ -638,6 +668,7 @@
 
 	h3 {
 		color: $colorOne;
+		text-align: left;
 	}
 
 	h4 {
@@ -657,6 +688,13 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center center;
+	}
+
+	@include mq("medium", "max-width") {
+		.col-4 {
+			position: relative;
+			@include transform(translate(0%, 0%));
+		}
 	}
 
 	@include mq("small", "max-width") {
